--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	font-family: 'Fira Sans', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+	background-color: #fcfcfc;
+	color: var(--clr-text-primary);
+}
+
+:root {
+	--clr-primary: #3c3440;
+	--clr-text-primary: #0d0d0d;
+	--clr-text-light: #fcfcfc;
+	--clr-danger: #e21a1a;
+	--clr-success: #1fa61b;
+}
+
+.app-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 0 auto;
+	width: min(95vw, 800px);
+}
+
+.header {
+	margin-top: 1.5rem;
+	margin-bottom: 1rem;
+}
+
+.btn {
+	align-items: center;
+	background-color: var(--clr-primary);
+	border-radius: 4px;
+	color: var(--clr-text-light);
+	cursor: pointer;
+	display: flex;
+	gap: 0.5rem;
+	justify-content: center;
+	padding: 0.75rem 1rem;
+	text-align: center;
+	transition: all 0.15s;
+	border: none;
+	transition: var(--fast-transition);
+}
+
+.btn-block {
+	width: 100%;
 }
