Added nationalities select element

--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -13,7 +13,9 @@ body {
 }
 
 :root {
+	--clr-gray: #ccc;
 	--clr-primary: #3c3440;
+	--clr-primary-light: #e6e3e8;
 	--clr-text-primary: #0d0d0d;
 	--clr-text-light: #fcfcfc;
 	--clr-danger: #e21a1a;
