--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -12,6 +12,14 @@ body {
 	color: var(--clr-text-primary);
 }
 
+hr {
+	height: 1px;
+	background-color: var(--clr-gray);
+	margin: 1rem 0;
+	outline: none;
+	border: none;
+}
+
 footer {
 	width: 100%;
 	padding-top: 5rem;
